// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button block 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius za-button--block"
  role="button"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button disabled 1`] = `
<button
  aria-disabled="true"
  class="za-button za-button--default za-button--md za-button--radius za-button--disabled"
  role="button"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button ghost 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius za-button--ghost"
  role="button"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button href and target 1`] = `
<a
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius za-button--link"
  href="https://zarm.design"
  role="button"
  tabindex="0"
  target="__blank"
>
  <span>
    foo
  </span>
</a>
`;

exports[`Button htmlType 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius"
  role="button"
  type="submit"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button icon 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius"
  role="button"
  type="button"
>
  <div
    class="za-button__content"
  >
    <img
      alt=""
      src="https://zarm.design/images/logo.ce68565d.svg"
    />
    <span>
      foo
    </span>
  </div>
</button>
`;

exports[`Button loading 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius"
  role="button"
  type="button"
>
  <div
    class="za-button__content"
  >
    <svg
      class="za-activity-indicator rotate360"
      viewBox="0 0 62 62"
    >
      <circle
        class="za-activity-indicator__path"
        cx="31"
        cy="31"
        fill="none"
        r="28.5"
        style="stroke-width:5"
      />
      <circle
        class="za-activity-indicator__line"
        cx="31"
        cy="31"
        fill="none"
        r="28.5"
        style="stroke-dasharray:35.81415625092364 179.0707812546182;stroke-width:5"
      />
    </svg>
    <span>
      foo
    </span>
  </div>
</button>
`;

exports[`Button renders correctly 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius"
  role="button"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button shape is radius 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius"
  role="button"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button size 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--lg za-button--radius"
  role="button"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button theme 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--primary za-button--md za-button--radius"
  role="button"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;
